--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -30,15 +30,19 @@ p {
 }
 
 .about {
-  height: 231px;
+  padding: 1em;
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
 
 .information {
   font-size: 16px;
   height: 73px;
+  padding: 1em;
+  margin-bottom: 2em;
 }
 
 .footer {
-  height: 29px;
+  padding: 0.8em;
   font-size: 14px;
 }
