decreasing logo size

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -8,6 +8,11 @@ p {
   text-align: center;
 }
 
+.header_logo {
+  width: 270px;
+  height: 206px;
+}
+
 .logo {
   display: flex;
   align-content: center;
