Terminando as configurações de scss do componente Menu

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -6,6 +6,8 @@
 @import '../../components/Button/style.scss';
 @import '../../components/CardArea/style.scss';
 @import '../../components/ButtonFirstSteps/style.scss';
+@import '../../components/Menu/style.scss';
+@import '../../components/Header/style.scss';
 
 //pages
 @import '../../pages/Home/style.scss';
