--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -21,20 +21,17 @@
     transform: translateY(4px);
 }
 
-a{
+li{
+    list-style: none;
+    padding: 16px 0;
     color: #fff;
     text-decoration: none;
     font-size: large;
     font-weight: bold;
 }
 
-a:hover{
+li:hover{
     text-decoration: underline white;
-}
-
-li{
-    list-style: none;
-    padding: 16px 0;
 }
 
 .nav{
@@ -71,7 +68,7 @@ li{
     display: block;
     width: auto;
     height: auto;
-    margin-left: 40%;
+    margin-left: 20%;
 }
 
 .changeMenuBar{
@@ -79,4 +76,8 @@ li{
     opacity: 0.9;    
     width: 100%;
     height: auto;
+}
+
+.forLinkReact{
+    text-decoration: none;
 }
