--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -50,6 +50,12 @@ p {
   font-size: 14px;
 }
 
+.button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (min-width: 800px) {
   .information {
     background-color: $OFFWHITE;
