--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -14,5 +14,8 @@ Button {
 @media (min-width: 800px) {
   button {
     width: 75%;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    height: 60%;
   }
 }
