--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -60,6 +60,15 @@ p {
   .information {
     background-color: $OFFWHITE;
     font-size: 24px;
+    width: 80%;
+  }
+
+  .button {
+    width: 50%;
+  }
+
+  .about {
+    margin-top: 0%;
   }
 
   .box {
@@ -68,9 +77,14 @@ p {
 
   .container {
     height: 100vh;
+    justify-content: flex-start;
   }
 
   .header_logo {
     height: 50%;
+  }
+
+  .logo {
+    width: 80%;
   }
 }
