--- a/src/components/CardArea/style.scss
+++ b/src/components/CardArea/style.scss
@@ -4,6 +4,9 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  height: auto;
+  justify-content: center;
+  min-height: 180px;
   margin: 10px;
   padding: 15px;
   cursor: pointer;
@@ -29,6 +32,7 @@
 
 @media (min-width: 800px) {
   .card {
-    max-width: 35%;
+    width: 20%;
+    height: 200px;
   }
 }
