--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,11 +1,18 @@
-.forLogo{
-    top: 0;
-    right: 0;
-    position: absolute;
-    width: 40%;
-    margin: 3%;
+.forLogo {
+  top: 0;
+  right: 0;
+  position: absolute;
+  width: 40%;
+  margin: 3%;
 }
 
-.forHeader{
-    height: 80px;
+.forHeader {
+  height: 80px;
+}
+
+@media (min-width: 800px) {
+  .forLogo {
+    width: 14%;
+    margin: 1%;
+  }
 }
