--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -8,6 +8,7 @@
 @import '../../components/ButtonFirstSteps/style.scss';
 @import '../../components/Menu/style.scss';
 @import '../../components/Header/style.scss';
+@import '../../components/CardInic/style.scss';
 
 //pages
 @import '../../pages/Home/style.scss';
