--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -54,12 +54,29 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 @media (min-width: 800px) {
+  .header {
+    margin-top: 1%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  main {
+    width: 50%;
+  }
+
+  .footer {
+    font-size: 16px;
+  }
+
   .information {
     background-color: $OFFWHITE;
-    font-size: 24px;
+    font-size: 18px;
     width: 80%;
   }
 
@@ -68,23 +85,34 @@ p {
   }
 
   .about {
-    margin-top: 0%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .aboutName {
+    font-size: 22px;
+  }
+
+  .aboutText {
+    font-size: 16px;
+    width: 90%;
+    text-align: justify;
   }
 
   .box {
     display: flex;
+    height: 60%;
+  }
+
+  .box2 {
+    display: flex;
+    flex-direction: column;
+    height: 40%;
   }
 
   .container {
     height: 100vh;
-    justify-content: flex-start;
-  }
-
-  .header_logo {
-    height: 50%;
-  }
-
-  .logo {
-    width: 80%;
   }
 }
