Finalizando página de Iniciativas

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -13,3 +13,4 @@
 //pages
 @import '../../pages/Home/style.scss';
 @import '../../pages/Start/style.scss';
+@import '../../pages/Initiatives/style.scss';
