--- a/src/components/CardInic/style.scss
+++ b/src/components/CardInic/style.scss
@@ -12,6 +12,7 @@
     border-width: 15px;
     border-color: $PINK;
     border-radius: 5px;
+    margin: 0px auto 0px auto;
 }
 
 .forTitle{
@@ -28,4 +29,10 @@
 .cover-card{
     width: 50%;
     height: 50%;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
 }
