Ajustes no card de iniciativas

--- a/src/components/CardInic/style.scss
+++ b/src/components/CardInic/style.scss
@@ -12,7 +12,7 @@
     border-width: 15px;
     border-color: $PINK;
     border-radius: 5px;
-    margin: 0px auto 0px auto;
+    margin: 0px auto 10% auto;
 }
 
 .forTitle{
