--- a/src/components/CardDev/style.scss
+++ b/src/components/CardDev/style.scss
@@ -3,19 +3,16 @@
 }
 .content-course{
     background-color: #056674b0;
+    display: inline-table;
     font-size: 20px;
-    align-items: center;
-    width: 530px;
+    width: 460px;
+    height: 90px;
     padding: 10px;
     margin: 5px;
     border-radius: 10px;
 }
-.images{
-    width: 150px;
-    height: 75px;
-    margin-right: 10px;
-}
 .txt-link{
     text-align: justify;
     width: 155px;
+    display: contents;
 }
