Alteração no cardDev

--- a/src/components/CardDev/style.scss
+++ b/src/components/CardDev/style.scss
@@ -1,7 +1,7 @@
 .go-course{
     text-decoration: none;
 }
-.content-course{
+.content-dev{
     background-color: #056674b0;
     display: inline-table;
     font-size: 20px;
