Fazendo pequenos ajustes no CardInic, na page Initiatives e no Menu

--- a/src/components/CardInic/style.scss
+++ b/src/components/CardInic/style.scss
@@ -36,3 +36,9 @@ a{
     color: white;
     font-weight: bolder;
 }
+
+@media (min-width: 800px) {
+    .basic-structure{
+        width: 35%;
+    }
+}
