--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -7,7 +7,7 @@
 .bar {
   height: 5px;
   width: 100%;
-  background-color: $PINK;
+  background-color: $DARKBLUE;
   display: block;
   border-radius: 5px;
   transition: 0.3s ease;
