alterando classe no cardDev

--- a/src/components/CardDev/style.scss
+++ b/src/components/CardDev/style.scss
@@ -11,7 +11,7 @@
     margin: 5px;
     border-radius: 10px;
 }
-.txt-link{
+.txt-link-dev{
     text-align: justify;
     width: 155px;
     display: contents;
