--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -9,6 +9,7 @@
 @import '../../components/Menu/style.scss';
 @import '../../components/Header/style.scss';
 @import '../../components/CardInic/style.scss';
+@import '../../components/CardTitle/style.scss';
 
 //pages
 @import '../../pages/Home/style.scss';
