--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -14,3 +14,4 @@
 @import '../../pages/Home/style.scss';
 @import '../../pages/Start/style.scss';
 @import '../../pages/Initiatives/style.scss';
+@import '../../pages/Guide/style.scss';
