--- a/src/components/CardLink/style.scss
+++ b/src/components/CardLink/style.scss
@@ -1,21 +1,27 @@
-.go-course{
-    text-decoration: none;
+.go-course {
+  text-decoration: none;
 }
-.content-course{
-    background-color: #056674b0;
-    font-size: 20px;
-    align-items: center;
-    width: 530px;
-    padding: 10px;
-    margin: 5px;
-    border-radius: 10px;
+.content-course {
+  background-color: #056674b0;
+  font-size: 20px;
+  align-items: center;
+  width: 90%;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 10px;
 }
-.images{
-    width: 150px;
-    height: 75px;
-    margin-right: 10px;
+.images {
+  width: 150px;
+  height: 75px;
+  margin-right: 10px;
 }
-.txt-link{
-    text-align: justify;
-    width: 155px;
+.txt-link {
+  text-align: justify;
+  width: 155px;
+}
+
+@media (min-width: 800px) {
+  .content-course {
+    width: 40%;
+  }
 }
