--- a/src/components/CardTitle/style.scss
+++ b/src/components/CardTitle/style.scss
@@ -1,21 +1,24 @@
 .card-title {
   align-items: center;
   background-color: $DARKBLUE;
-  border-radius: 5px;
   display: flex;
-  height: auto;
+  height: 100px;
   justify-content: space-between;
-  height: auto;
-  margin: 0 auto;
+  margin: 45px auto;
   padding: 15px;
-  cursor: pointer;
-  width: 95%;
+  width: 100%;
+  @media (min-width: 800px) {
+    justify-content: center;
+  }
 
   .h1-title {
     color: $WHITE;
     font-size: 30px;
-    margin-right: 10px;
+    margin: 0 20px;
     text-transform: capitalize;
+    @media (min-width: 800px) {
+      margin-right: 20px;
+    }
   }
 
   .illustration-title {
@@ -23,17 +26,7 @@
     justify-content: center;
 
     .img-title {
-      max-height: 50px;
+      max-height: 80px;
     }
-  }
-}
-
-@media (min-width: 800px) {
-  .card-title {
-    width: 50%;
-  }
-
-  .h1-title {
-    margin-right: 20px;
   }
 }
