--- a/src/pages/Back/style.scss
+++ b/src/pages/Back/style.scss
@@ -1,11 +1,12 @@
 @import '../../assets/scss/conf';
 
-.main-back{
-    text-align: center;
+.main-back {
+  text-align: center;
+  margin-bottom: 100px;
 }
 
-@media (max-width: 800px){
-    .content-course{
-        display: inline-flex;
-    }
+@media (max-width: 800px) {
+  .content-course {
+    display: inline-flex;
+  }
 }
