--- a/src/pages/FrontEnd/style.scss
+++ b/src/pages/FrontEnd/style.scss
@@ -1,11 +1,12 @@
 @import '../../assets/scss/conf';
 
-.main-front{
-    text-align: center;
+.main-front {
+  text-align: center;
+  margin-bottom: 100px;
 }
 
-@media (min-width: 800px){
-    .content-course{
-        display: inline-flex;
-    }
+@media (min-width: 800px) {
+  .content-course {
+    display: inline-flex;
+  }
 }
