--- a/src/pages/Start/style.scss
+++ b/src/pages/Start/style.scss
@@ -11,6 +11,7 @@
 .main {
   .title {
     background-color: $LIGHTBLUE;
+    margin-top: 45px;
     padding: 15px 0;
 
     h1 {
@@ -23,7 +24,7 @@
     }
   }
   .cards {
-    margin-top: 20px;
+    margin: 20px 0;
   }
 }
 
