--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -10,6 +10,7 @@
 @import '../../components/Header/style.scss';
 @import '../../components/CardInic/style.scss';
 @import '../../components/CardTitle/style.scss';
+@import '../../components/CardLink/style.scss';
 
 //pages
 @import '../../pages/Home/style.scss';
