--- a/src/components/CardLink/style.scss
+++ b/src/components/CardLink/style.scss
@@ -7,8 +7,19 @@
   align-items: center;
   width: 90%;
   padding: 10px;
-  margin: 5px;
+  margin: 5px 5px 10px 5px;
   border-radius: 10px;
+  cursor: pointer;
+
+  .for-title-cardlink{
+    color: $WHITE;
+    text-align: center;
+    margin: auto;
+  }
+
+  .for-div-cardlink{
+    width: 30%;
+  }
 }
 .images {
   width: 150px;
