--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -16,4 +16,4 @@
 @import '../../pages/Initiatives/style.scss';
 @import '../../pages/Guide/style.scss';
 @import '../../pages/Mentoring/style.scss';
-
+@import '../../pages/NotFound/style.scss';
