--- a/src/pages/Guide/style.scss
+++ b/src/pages/Guide/style.scss
@@ -10,6 +10,6 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  text-align: center;
+  text-align: justify;
   width: 80%;
 }
