--- a/src/components/CardTitle/style.scss
+++ b/src/components/CardTitle/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   height: 100px;
   justify-content: space-between;
-  margin: 45px auto;
+  margin: 5% auto;
   padding: 15px;
   width: 100%;
   @media (min-width: 800px) {
