--- a/src/pages/Start/style.scss
+++ b/src/pages/Start/style.scss
@@ -11,7 +11,7 @@
 .main {
   .title {
     background-color: $LIGHTBLUE;
-    margin-top: 45px;
+    margin-top: 0.8%;
     padding: 15px 0;
 
     h1 {
