--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -11,13 +11,13 @@
 
 @media (max-width: 500px) {
   .forLogo {
-    margin: 3%;
+    margin: 0 3% 0 0;
   }
 }
 
 @media (min-width: 800px) {
   .forLogo {
     width: 20%;
-    margin: 2%;
+    margin: 0 2% 0 0;
   }
 }
