--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -25,7 +25,6 @@ p {
   align-content: center;
 }
 
-
 .aboutName {
   font-size: 25px;
   margin-bottom: 5%;
@@ -61,10 +60,10 @@ p {
 }
 
 .recuo {
-   text-indent:2em 
+  text-indent: 2em;
 }
 
-.for-span-home{
+.for-span-home {
   font-weight: bolder;
   color: $DARKBLUE;
 }
